// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/mistakes Mistakes render correctly With count one 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`src/mistakes Mistakes render correctly With count zero 1`] = `
<div
  className="game__mistakes"
/>
`;
